fix: spacing

--- a/src/sass/common/_base.scss
+++ b/src/sass/common/_base.scss
@@ -38,7 +38,9 @@ body {
 }
 
 .main {
-  padding: 1rem;
+  margin: 1rem;
+  @include px(1rem);
+  
   @include screen(sm) {
     @include px(2rem);
   }
