--- a/src/sass/ghost.scss
+++ b/src/sass/ghost.scss
@@ -31,6 +31,7 @@
       position: absolute;
       bottom: 2rem;
       box-shadow: 0px 0px 4px 1px var(--accent-color);
+      z-index: 120;
       @include transition;
   
       @include screen(md) {
